[package]
name = "NFT_hockey_game"
version = "0.1.0"
authors = ["Alex, lesha.pitenko791@gmail.com", "Yurii, yurii.stolbetskyi@nure.ua"]
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
near-sdk = "2.0.0"

[profile.release]
codegen-units=1
opt-level = "z"
lto = true
debug = false
panic = "abort"
overflow-checks = true